--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@langchain/ollama": "^0.1.0",
-    "@react-google-maps/api": "^2.20.3",
-    "@types/leaflet": "^1.9.12",
-    "@types/react-leaflet": "^3.0.0",
-    "fs": "^0.0.1-security",
+    "@langchain/openai": "^0.3.2",
     "langchain": "^0.3.2",
     "mapbox-gl": "^3.7.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "react-leaflet": "^4.2.1",
-    "zustand": "^5.0.0-rc.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
